--- a/app/views/statics/about.html.erb
+++ b/app/views/statics/about.html.erb
@@ -17,7 +17,7 @@
     <div class="img-responsive" id="aboutBanner"></div><!-- #aboutBanner 品牌精神圖 -->
     <p>
       <br>
-      123創造出妳自己的風格,讓自己看起來獨一無二，而別人也能了解妳的與眾不同。下了伸展台的時尚，很困難也很容易，對 LadyBoo 來說，時尚是了解自己，也懂得欣賞自己、妝點自己，是不必盲目跟風，就穿搭出別人學不來的獨特有型，我們更相信，因為熱愛一切美好事物而自信開心的妳，自然而然散發出迷人魅力，也是一種時尚定義。<br>
+      創造出妳自己的風格,讓自己看起來獨一無二，而別人也能了解妳的與眾不同。下了伸展台的時尚，很困難也很容易，對 LadyBoo 來說，時尚是了解自己，也懂得欣賞自己、妝點自己，是不必盲目跟風，就穿搭出別人學不來的獨特有型，我們更相信，因為熱愛一切美好事物而自信開心的妳，自然而然散發出迷人魅力，也是一種時尚定義。<br>
       <br>
       「有時候，一些簡單的改變與調整，就可以創造意想不到的結果」，這是 LadyBoo 創立品牌的初衷，而「蕾絲服飾」就是我們想與妳分享的簡單時尚：衣著加上蕾絲，輕輕鈎織出女人細緻多變的美，為平常的自己加上一點新鮮想像，讓穿著風情也跟著搖曳繽紛起來，當妳看見光影、看見身體像花綻開的優美姿態，欣賞自己的眼光開始不一樣，別人也會捨不得離開目光，細細品味如此精彩的妳。<br>
       <br>
