--- a/app/views/useradmin/users/index.html.erb
+++ b/app/views/useradmin/users/index.html.erb
@@ -50,7 +50,7 @@
                 </div>
                 <div class="input-group input-container edit-email">
                   <span class="input-group-addon"><span class="input-icon input-icon-email"></span><span class="input-text">電子信箱</span></span>
-                  <%= @user.email %>
+                  <p><%= @user.email %></p>
                 </div>
                 <div class="input-group input-container edit-phone">
                   <span class="input-group-addon"><span class="input-icon input-icon-phone"></span><span class="input-text">連絡電話</span></span>
