fix cart privacy pages

--- a/app/views/cart/check.html.erb
+++ b/app/views/cart/check.html.erb
@@ -21,7 +21,15 @@
       <div class="input-group custom-checkbox">
         <input type="checkbox" id="agree_privacy" class="checkbox" checked>
         <span class="checbox-container"><i class="fa fa-check"></i></span>
-           我已仔細閱讀並明瞭<a href="terms.html" title="服務條款">「服務條款」</a>、<a href="privacy.html" title="隱私權政策">「隱私權政策」</a>等所載內容及其意義，茲同意該等條款規定，並願遵守網站現今、嗣後規範的各種規則。
+        
+           我已仔細閱讀並明瞭
+           <%= link_to page_pages_path("terms") do %>
+            「服務條款」
+           <% end %>
+           、
+           <%= link_to page_pages_path("privacy") do %>
+          「隱私權政策」、「智慧財產權聲明」
+           <% end %>等所載內容及其意義，茲同意該等條款規定，並願遵守網站現今、嗣後規範的各種規則。
     I've read through, understand and accept LadyBoos online policies: 
         <%= link_to "PRIVACY", page_pages_path("privacy") %>, 
         <%= link_to "TERMS & CONDITIONS", page_pages_path("terms") %>.
