--- a/app/views/statics/terms.html.erb
+++ b/app/views/statics/terms.html.erb
@@ -17,7 +17,7 @@
           <p>感謝您使用 LadyBoo 網站及訂購本網站商品，本網站是由女駙服飾有限公司（下稱本公司）經營。為充分保障您的交易安全及購物權益，敬請於使用本網站服務或訂購本網站商品前，詳閱下列服務條款；若您不同意其中任何內容，請勿繼續使用本網站服務或訂購本網站商品，但依然感謝您的光臨，也希望日後能有機會為您服務</p>
           <h2>同意條款</h2>
           <ol>
-            <li>您於第一次訂購本網站商品前，請詳細閱讀本服務條款、本網站公告之<a href="privacy.html" title="隱私權政策及智慧財產權聲明">隱私權政策及智慧財產權聲明</a> ，當您開始訂購流程時，代表您已瞭解並同意其全部內容；若您不同意其中任何內容，
+            <li>您於第一次訂購本網站商品前，請詳細閱讀本服務條款、本網站公告之<a href="/pages/privacy" title="隱私權政策及智慧財產權聲明">隱私權政策及智慧財產權聲明</a> ，當您開始訂購流程時，代表您已瞭解並同意其全部內容；若您不同意其中任何內容，
     請勿填寫個人資料或進入訂購流程。</li>
             <li>就本服務條款、本網站隱私權政策或智慧財產權聲明之修改，除影響您已完成之訂購流程，本公司會個別以電子郵件或手機簡訊通知外，其餘修改均無法個別通知，您可於每次瀏覽本網站
     或訂購商品前詳細閱讀；當您於修改後繼續使用本網站服務，視為您已同意修改內容。
@@ -29,7 +29,7 @@
           </ol>
           <h2>個人資料保護及帳號密碼維護</h2>
           <ol>
-            <li>本公司非常重視您的個人資料保護，相關個人資料保護事項，請詳見本網站公告之<a href="privacy.html" title="隱私權政策">隱私權政策</a>。</li>
+            <li>本公司非常重視您的個人資料保護，相關個人資料保護事項，請詳見本網站公告之<a href="/pages/privacy" title="隱私權政策">隱私權政策</a>。</li>
             <li>為保障交易安全，請務必就您自行選定之帳號及密碼善盡保管及保密責任，勿將帳號或密碼洩漏予第三人或與第三人共用，或允許第三人使用您的個人資料申請帳號或請求變更密碼；就使
     用您正確帳號及密碼登入後之交易行為，將視為您本人所為（但若您能證明是遭第三人非法盜用且您無過失，本公司將視個案同意撤銷交易行為）。</li>
             <li>您同意且保證所填寫之個人資料均係您本人之真實資料，未使用他人資料或不實資料；若經本公司發現有違反情事，本公司得暫停或單方終止您使用該帳號及本網站服務之權利，且暫停或
@@ -43,7 +43,7 @@
     不得拒絕。</li>
             <li>倘本網站商品標價錯誤（例如價格明顯過低且該商品並無優惠活動），本公司得視錯誤情形，就該商品訂定每一消費者訂購數量之上限，超過該上限之訂單或同一消費者利用多數帳號重複
     下單時，本公司得拒絕該訂單。</li>
-            <li>您可依消費者保護法第 19 條規定，於貨到後 7 日之猶豫期內，向本公司表示解約退款，相關詳細程序請詳見本網站公告之<a href="contact.html" title="退換貨須知">退換貨須知</a>。特別提醒您，猶豫期並非試用期，若因您已使用該
+            <li>您可依消費者保護法第 19 條規定，於貨到後 7 日之猶豫期內，向本公司表示解約退款，相關詳細程序請詳見本網站公告之<a href="/contacts" title="退換貨須知">退換貨須知</a>。特別提醒您，猶豫期並非試用期，若因您已使用該
     商品而造成汙損或無法回復的使用痕跡，本公司依法得視個案情形拒絕解約。</li>
             <li>完成訂購程序後，您可選擇使用信用卡、 ATM 轉帳、Paypal 等不同方式進行付款，相關細節請詳見本網站公告之付款方式。</li>
             <li>本網站之商品運送將依您於訂購程序中指定之方式為之，除另行標示或有優惠活動外，本網站商品之標價不包含運費；關於各種運送方式及運費標準，請詳見本網站公告之商品運送及運費。</li>
@@ -66,7 +66,7 @@
           <p>Thank you for using the LadyBoo website and for your order of products on this website. This website is operated by NÜ FU Clothes Co. Ltd. (hereinafter the “Company”). In order to fully protect your transaction security and shopping interests, please read the following terms and conditions of service carefully before you use any service of this website or order any product from this website. If you do not agree with any provision, please do not continue to use any service of this website or order any product from this website. But we thank you for your visit and hope to serve you in the future.</p>
           <h2>Agreed Terms and Conditions</h2>
           <ol>
-            <li>Before your first order of any product on this website, please read these Terms and Conditions of Service and the <a href="privacy.html" title="Privacy Policy and the Intellectual Property Right Statement">Privacy Policy and the Intellectual Property Right Statement</a> published on this website carefully. When you start the order process, you are deemed to have understood and agreed to all of such terms and conditions. If you do not agree with any of such terms, please do not complete your personal information, nor enter into the order process.</li>
+            <li>Before your first order of any product on this website, please read these Terms and Conditions of Service and the <a href="/pages/privacy" title="Privacy Policy and the Intellectual Property Right Statement">Privacy Policy and the Intellectual Property Right Statement</a> published on this website carefully. When you start the order process, you are deemed to have understood and agreed to all of such terms and conditions. If you do not agree with any of such terms, please do not complete your personal information, nor enter into the order process.</li>
             <li>Other than any amendment to these Terms and Conditions of Service or the Privacy Policy or Intellectual Property Statement of this website that may affect the order process that you have completed, which The Company shall notify individually by email or mobile text message, no other amendment shall be notified individually. You can read them carefully upon each visit to this website or before ordering any product.  If you continue to use any service of this website after such amendment, you shall be deemed to have agreed to the amendment.</li>
             <li>The services and product orders on this website are done through the Internet.  Therefore you agree to express your intentions or exercise your written consents by electronic document, electronic record, or email. The Company can also express our intentions to you through electronic document or email. In case of any error or malfunction of any email you provide, rendering it impossible for you to receive our expression of intention correctly and fully, you agree that our expression of intention shall be deemed legally delivered under such 
     circumstances.</li>
@@ -74,7 +74,7 @@
           </ol>
           <h2>Personal Information protection and Maintenance of Account Number and Passcode</h2>
           <ol>
-            <li>The Company is very dedicated to the protection of your personal information. For matters related to personal data protection, please refer to the <a href="privacy.html" title="Privacy Policy">Privacy Policy </a>published on this website.</li>
+            <li>The Company is very dedicated to the protection of your personal information. For matters related to personal data protection, please refer to the <a href="/pages/privacy" title="Privacy Policy">Privacy Policy </a>published on this website.</li>
             <li>To ensure transaction security, please maintain and keep confidential the account number and passcode you selected and do not disclose the account number or passcode to any third party, or share the account number or passcode with any third party, or allow any third party to use your personal information to apply for an account number or request a change of passcode. All transactions after login with the use of your correct account number and passcode will be deemed to have been done by you (but if you can prove that a third party 
     engaged in illegal and fraudulent use and you are not negligent, The Company will agree to cancel the transaction based on individual cases.)</li>
             <li>You agree and guarantee that the personal information you completed was true information of yourself and that you have not used any other person’s information or false information. If The Company discovers any violation, The Company may suspend or unilaterally terminate your right to use this account number and the services on this website. You will be solely responsible for the consequence of such suspension or termination and shall hold us harmless.
@@ -86,7 +86,7 @@
             <li>When you put products in this website into the shopping cart, you have not yet completed the order process. If any other person completes the order process before you complete the order process, exhausting the stock of the product, our website will inform you that the product has been removed from your shopping cart, or the quantity ordered has been reduced.</li>
             <li>The Company is deemed to have accepted your order for which you completed the order process, unless The Company cannot accept the order due to any reason that is not attributable to us within 2 working days from the completion of the order process.  However, unless provided by law, The Company cannot refuse any order for which you have completed the payment.</li>
             <li>If any product on this website is wrongly priced (such as excessively low price without any promotional event), The Company may impose a limit on the quantity that may be ordered by each consumer for each product. The Company can refuse any order that exceeds such limit or if the same consumer uses different account numbers to issue multiple orders.</li>
-            <li>In accordance with Article 19 of the Consumer Protection Act, you can inform us to cancel the contract and request a refund within the consideration period of 7 days after delivery of the product.  The relevant detailed process is provided in the <a href="contact.html" title="Guidelines for Product Return and Replacement">Guidelines for Product Return and Replacement</a> published on this website. The Company reminds you that the consideration period is not a trial period. If you have used the product and left any mark of stain or irreversible trace, The Company may refuse to cancel the contract based on the individual case in accordance with law.</li>
+            <li>In accordance with Article 19 of the Consumer Protection Act, you can inform us to cancel the contract and request a refund within the consideration period of 7 days after delivery of the product.  The relevant detailed process is provided in the <a href="/contacts" title="Guidelines for Product Return and Replacement">Guidelines for Product Return and Replacement</a> published on this website. The Company reminds you that the consideration period is not a trial period. If you have used the product and left any mark of stain or irreversible trace, The Company may refuse to cancel the contract based on the individual case in accordance with law.</li>
             <li>After the order process is completed, you can choose to use a credit card, transfer money by ATM(Only Taiwan Domestic Orders), or paypal. The relevant details are provided under Payment Terms published on this website.</li>
             <li>Products on this website will be delivered in the designated manner you selected during the order process. Unless otherwise indicated or under any promotional event, the product prices on this website do not include shipping fees.  For all shipping methods and shipping fee schedule, please refer to product delivery and shipping fee published on this website.</li>
             <li>For all other matters related to transactions, please refer to all Guidelines for Product Order published on this website. When you start an order process, you are deemed to have understood and agreed to all provisions.</li>
