--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -229,9 +229,9 @@
   });
 */
 </script>
-<script src="/js/bootstrap.min.js"></script> 
-<script src="j/s/jquery.flexslider-min.js"></script>
 <script src="/js/owl.carousel.min.js"></script> 
-<script src="/js/main.js"></script> 
-<!--<script src="/js/jquery.js"></script>-->
+
+<script src="/js/jquery.js"></script> 
+
+<script>var jQ2 = $.noConflict(true);</script>
 <script src="/js/cloud-zoom.1.0.2.min.js"></script>
