--- a/app/views/layouts/clean.html.erb
+++ b/app/views/layouts/clean.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>cama 現烘咖啡專門店 -[cama café]</title>
+  <title>Ladyboo</title>
   <!--[if lt IE 9]>
     <script src="/js/html5.js"></script>
   <![endif]-->
