--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,12 +6,9 @@
   <%= link_to 'Home', root_path, title: '首頁' %> &nbsp; > &nbsp; <%= link_to 'SHOP', 'javascript:void(0);'%>
 <% end %>
 
-<% if @category.parent_id != 0 && @parent_cate.galleries.first  %>
-  <% content_for :header do %>
-    
-  <% end %>
-<% end %>
-<div id="prodTop"><!-- Start #prodTop 上方橫福 --> 
+<% if @category.parent_id == 2 && @parent_cate.galleries.first  %>
+  
+    <div id="prodTop"><!-- Start #prodTop 上方橫福 --> 
       <div class="container">
         <div class="col-md-12">
           <div class="row">
@@ -21,6 +18,23 @@
         </div>
       </div>
     </div><!-- End #prodTop --> 
+  
+<% end %>
+
+<% if @category.depth == 1 && @category.galleries.first  %>
+  
+    <div id="prodTop"><!-- Start #prodTop 上方橫福 --> 
+      <div class="container">
+        <div class="col-md-12">
+          <div class="row">
+            <img id="bannerImg" src=<%= "#{@category.galleries.first.attachment.url}" %>>
+            <img id="bannerFrame" src="/images/frame_bannerLookbook.png">
+          </div>
+        </div>
+      </div>
+    </div><!-- End #prodTop --> 
+  
+<% end %>
 
 <div class="xlg-margin hidden-xs"></div><!-- Space 間隔 -->
 <div class="container"><!-- Start .container -->
