--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -138,7 +138,7 @@
                         <% levels = @hierarchy.select { |v| v[2] == @root_node.id } %>
                           <% levels.each do | level1 | %>
                             <div class="col-5">
-                              <a href="javascript:void(0);" class="mega-menu-title"><%= level1[3] %></a><!-- End .mega-menu-title -->
+                              <%= link_to level1[3], category_path(id: level1[0]), class: "mega-menu-title" %><!-- End .mega-menu-title -->
                               <ul class="mega-menu-list clearfix">
                                 <% levels = @hierarchy.select { |v| v[2] == level1[0] } %>
                                 <% levels.each do | level2 | %>
@@ -158,7 +158,7 @@
                         <% lookbook = Lookbook.where(status: 'enable').first %>
                         <% if lookbook %>
                           <div class="col-5">
-                            <%= link_to lookbook.name, 'javascript:void(0);', class: "mega-menu-title" %><!-- End .mega-menu-title -->
+                            <div class='mega-menu-title'><%= lookbook.name %></div><!-- End .mega-menu-title -->
                             <ul class="mega-menu-list clearfix">
                               <% lookbook.topics.each do | topic | %>
                                 <li>
@@ -171,7 +171,7 @@
                         <% topic_collections = TopicCollection.where(status: 'enable').all.limit(4) %>
                         <% if topic_collections %>
                           <div class="col-5">
-                            <a href="javascript:void(0);" class="mega-menu-title">系列主題</a><!-- End .mega-menu-title -->
+                            <div class="mega-menu-title">系列主題</div><!-- End .mega-menu-title -->
                             <ul class="mega-menu-list clearfix">
                               <% topic_collections.each do | collection | %>
                                 <li>
@@ -196,6 +196,10 @@
                         品牌精神<br>
                         ABOUT US
                       <% end %>
+                      <ul>
+                        <li><%= link_to "最新消息 NEWS", announcements_path %></li>
+                        <li><%= link_to "社群迴響 COMMUNITY", communities_path %></li>
+                      </ul>
                     </li>
                     
                     <li>
@@ -256,7 +260,7 @@
 
   <script src="/js/bootstrap.min.js"></script> 
   <script src="/js/jquery.flexslider-min.js"></script> 
-  
+
   <script src="/js/main.js"></script> 
   <!--LightBox Start**************************************************************************************************************-->
 <div id="lightBox">
